added new job description

--- a/style.css
+++ b/style.css
@@ -101,6 +101,15 @@ p {
   font-size: 1em;
   line-height: 2.2em;
 }
+
+.invert {
+  color: #fff;
+}
+
+.invert :is(h3,h4,h5,h6) {
+  color: #fff;
+}
+
 blockquote {
   line-height: 1.2em;
   display: inline-block;
